# AutonomousAdversarialArchitectAgent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: distributed-agent-testing.md
examples/: financial_agent.py  poisoned_mcp_server.py  poisoned_tools.py  victim_service.py
src/aaa/: __init__.py  __main__.py  cache.py  cli.py  graph.py  llm.py  mcp.py  mcp_client.py  report.py  state.py
src/aaa/env/: __init__.py  mock_server.py
src/aaa/live/: discovery.py  judge.py  orchestrator.py  planner.py  runner.py
src/aaa/nodes/: __init__.py  auditor.py  executor.py  judge.py  prober.py  strategist.py
tests/: conftest.py  test_auditor_ast.py  test_cache.py  test_cli.py  test_executor.py  test_graph.py  test_integration.py  test_judge.py  test_live_discovery.py  test_live_integration.py  test_live_planner.py  test_live_runner.py  test_llm.py  test_mcp.py  test_mcp_client.py  test_mock_server.py  test_prober.py  test_report.py  test_strategist.py
