[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aaa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-anthropic",
    "langchain-aws",
    "pydantic",
    "fastapi",
    "uvicorn",
    "httpx",
    "mcp>=1.0.0",
]

[project.scripts]
aaa = "aaa.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (may require LLM API key)"]

[tool.hatch.build.targets.wheel]
packages = ["src/aaa"]
